tests/instantiating/invalid/overwriting_property_element_type_definition/bus.fbd
type foo_mask mask
	width = 1

type bar_mask foo_mask
	width = 2

main bus
	my_mask1 foo_mask
